[gd_scene load_steps=46 format=3 uid="uid://dt58kkfy4x3gb"]

[ext_resource type="Script" path="res://scenes/level_1.gd" id="1_rfq76"]
[ext_resource type="Texture2D" uid="uid://b78kgih48n3q8" path="res://sprites/background4b.png" id="2_5mmy4"]
[ext_resource type="Texture2D" uid="uid://cpb2vmaqukg8u" path="res://sprites/background2.png" id="3_re570"]
[ext_resource type="Texture2D" uid="uid://cls8d8bcgnv24" path="res://sprites/background1.png" id="4_itbgn"]
[ext_resource type="Texture2D" uid="uid://bdl0bpmu21w0s" path="res://sprites/mainlev_build.png" id="5_gouvj"]
[ext_resource type="PackedScene" uid="uid://cop7c1ogtmvfp" path="res://scenes/player.tscn" id="6_wtfig"]
[ext_resource type="PackedScene" uid="uid://bt0hniy5va30a" path="res://scenes/soul.tscn" id="7_ahqs1"]
[ext_resource type="PackedScene" uid="uid://bkh3lt8ovxxto" path="res://scenes/camera_knight.tscn" id="8_828ne"]
[ext_resource type="PackedScene" uid="uid://chjldg7nh233n" path="res://scenes/transition.tscn" id="8_vwnpj"]
[ext_resource type="Script" path="res://scenes/TESTEST.gd" id="9_motuu"]
[ext_resource type="Script" path="res://scenes/area_2_ddoor_2.gd" id="11_84byi"]
[ext_resource type="Texture2D" uid="uid://bjm00g4aqvne7" path="res://sprites/levelbuilds/door.png" id="11_ku7g6"]
[ext_resource type="Texture2D" uid="uid://bbgytacsan37" path="res://sprites/levelbuilds/button.png" id="11_yaucr"]
[ext_resource type="Script" path="res://scenes/area_2dkeyuse.gd" id="12_17usk"]
[ext_resource type="Texture2D" uid="uid://ci5dgovydfjfc" path="res://sprites/levelbuilds/finalDoor.png" id="12_y853e"]
[ext_resource type="Script" path="res://scenes/area_2_dkey.gd" id="13_l85ip"]
[ext_resource type="Script" path="res://scenes/canvas_layer.gd" id="15_3ylfc"]
[ext_resource type="PackedScene" uid="uid://dyp2yemsn67uw" path="res://scenes/pause_menu.tscn" id="16_a00e1"]
[ext_resource type="Script" path="res://scenes/hitchecker.gd" id="17_mci04"]
[ext_resource type="PackedScene" uid="uid://cvg4w2eww1hxp" path="res://scenes/healthbar.tscn" id="18_r66lm"]
[ext_resource type="PackedScene" uid="uid://mjlpimxwe6h8" path="res://scenes/mushroom_man.tscn" id="19_s0i61"]
[ext_resource type="PackedScene" uid="uid://bkdcwgdmeq7kr" path="res://scenes/dash_bar.tscn" id="19_wl2ee"]
[ext_resource type="PackedScene" uid="uid://bb7yxllly171k" path="res://scenes/healheart.tscn" id="23_npj3d"]
[ext_resource type="PackedScene" uid="uid://b1jds24scxc18" path="res://scenes/big_skeleton.tscn" id="24_l168i"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_r5nwj"]
texture = ExtResource("2_5mmy4")
0:0/size_in_atlas = Vector2i(60, 30)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mcpbm"]
texture = ExtResource("3_re570")
0:0/size_in_atlas = Vector2i(60, 30)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6fc5q"]
texture = ExtResource("4_itbgn")
0:0/size_in_atlas = Vector2i(60, 30)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0pqkt"]
texture = ExtResource("5_gouvj")
6:1/0 = 0
20:1/0 = 0
21:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
36:1/0 = 0
47:1/0 = 0
47:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
48:1/0 = 0
48:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
49:1/0 = 0
49:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
50:1/0 = 0
50:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
51:1/0 = 0
51:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
52:1/0 = 0
52:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
53:1/0 = 0
53:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
54:1/0 = 0
54:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
55:1/0 = 0
55:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
56:1/0 = 0
56:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
57:1/0 = 0
57:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
60:1/0 = 0
61:1/0 = 0
62:1/0 = 0
2:2/0 = 0
3:2/0 = 0
6:2/0 = 0
8:2/0 = 0
10:2/0 = 0
12:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
20:2/0 = 0
21:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
27:2/0 = 0
28:2/0 = 0
30:2/0 = 0
32:2/0 = 0
34:2/0 = 0
36:2/0 = 0
60:2/0 = 0
61:2/0 = 0
62:2/0 = 0
2:3/0 = 0
3:3/0 = 0
6:3/0 = 0
17:3/0 = 0
18:3/0 = 0
36:3/0 = 0
47:3/0 = 0
48:3/0 = 0
49:3/0 = 0
50:3/0 = 0
51:3/0 = 0
52:3/0 = 0
53:3/0 = 0
54:3/0 = 0
55:3/0 = 0
56:3/0 = 0
57:3/0 = 0
60:3/0 = 0
61:3/0 = 0
62:3/0 = 0
7:4/0 = 0
8:4/0 = 0
10:4/0 = 0
12:4/0 = 0
14:4/0 = 0
15:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
27:4/0 = 0
28:4/0 = 0
30:4/0 = 0
32:4/0 = 0
34:4/0 = 0
35:4/0 = 0
60:4/0 = 0
61:4/0 = 0
62:4/0 = 0
2:5/0 = 0
3:5/0 = 0
39:5/0 = 0
40:5/0 = 0
2:6/0 = 0
3:6/0 = 0
5:6/0 = 0
6:6/0 = 0
8:6/0 = 0
10:6/0 = 0
12:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
19:6/0 = 0
20:6/0 = 0
22:6/0 = 0
24:6/0 = 0
26:6/0 = 0
27:6/0 = 0
30:6/0 = 0
32:6/0 = 0
34:6/0 = 0
36:6/0 = 0
37:6/0 = 0
39:6/0 = 0
40:6/0 = 0
47:6/0 = 0
48:6/0 = 0
49:6/0 = 0
51:6/0 = 0
52:6/0 = 0
53:6/0 = 0
55:6/0 = 0
56:6/0 = 0
57:6/0 = 0
2:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
8:7/0 = 0
10:7/0 = 0
14:7/0 = 0
15:7/0 = 0
17:7/0 = 0
19:7/0 = 0
20:7/0 = 0
22:7/0 = 0
24:7/0 = 0
26:7/0 = 0
27:7/0 = 0
32:7/0 = 0
34:7/0 = 0
36:7/0 = 0
37:7/0 = 0
39:7/0 = 0
40:7/0 = 0
47:7/0 = 0
48:7/0 = 0
49:7/0 = 0
51:7/0 = 0
52:7/0 = 0
53:7/0 = 0
55:7/0 = 0
56:7/0 = 0
57:7/0 = 0
60:7/0 = 0
61:7/0 = 0
62:7/0 = 0
10:8/0 = 0
12:8/0 = 0
14:8/0 = 0
15:8/0 = 0
22:8/0 = 0
30:8/0 = 0
32:8/0 = 0
47:8/0 = 0
48:8/0 = 0
49:8/0 = 0
51:8/0 = 0
52:8/0 = 0
53:8/0 = 0
55:8/0 = 0
56:8/0 = 0
57:8/0 = 0
60:8/0 = 0
62:8/0 = 0
2:9/0 = 0
5:9/0 = 0
37:9/0 = 0
40:9/0 = 0
60:9/0 = 0
62:9/0 = 0
2:10/0 = 0
3:10/0 = 0
5:10/0 = 0
6:10/0 = 0
8:10/0 = 0
9:10/0 = 0
16:10/0 = 0
26:10/0 = 0
33:10/0 = 0
34:10/0 = 0
36:10/0 = 0
37:10/0 = 0
39:10/0 = 0
40:10/0 = 0
55:10/0 = 0
56:10/0 = 0
57:10/0 = 0
60:10/0 = 0
62:10/0 = 0
2:11/0 = 0
3:11/0 = 0
5:11/0 = 0
6:11/0 = 0
8:11/0 = 0
9:11/0 = 0
12:11/0 = 0
14:11/0 = 0
16:11/0 = 0
17:11/0 = 0
25:11/0 = 0
26:11/0 = 0
28:11/0 = 0
30:11/0 = 0
33:11/0 = 0
34:11/0 = 0
36:11/0 = 0
37:11/0 = 0
39:11/0 = 0
40:11/0 = 0
55:11/0 = 0
56:11/0 = 0
57:11/0 = 0
2:12/0 = 0
3:12/0 = 0
5:12/0 = 0
6:12/0 = 0
8:12/0 = 0
9:12/0 = 0
16:12/0 = 0
17:12/0 = 0
25:12/0 = 0
26:12/0 = 0
33:12/0 = 0
34:12/0 = 0
36:12/0 = 0
37:12/0 = 0
39:12/0 = 0
40:12/0 = 0
55:12/0 = 0
56:12/0 = 0
57:12/0 = 0
60:12/0 = 0
61:12/0 = 0
62:12/0 = 0
12:14/0 = 0
14:14/0 = 0
16:14/0 = 0
18:14/0 = 0
24:14/0 = 0
26:14/0 = 0
28:14/0 = 0
30:14/0 = 0
60:14/0 = 0
61:14/0 = 0
62:14/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
6:15/0 = 0
8:15/0 = 0
9:15/0 = 0
33:15/0 = 0
34:15/0 = 0
36:15/0 = 0
38:15/0 = 0
39:15/0 = 0
40:15/0 = 0
41:15/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
12:16/0 = 0
14:16/0 = 0
16:16/0 = 0
26:16/0 = 0
28:16/0 = 0
30:16/0 = 0
39:16/0 = 0
40:16/0 = 0
41:16/0 = 0
9:18/0 = 0
10:18/0 = 0
12:18/0 = 0
13:18/0 = 0
15:18/0 = 0
16:18/0 = 0
18:18/0 = 0
19:18/0 = 0
23:18/0 = 0
24:18/0 = 0
26:18/0 = 0
27:18/0 = 0
29:18/0 = 0
30:18/0 = 0
32:18/0 = 0
33:18/0 = 0
46:18/0 = 0
47:18/0 = 0
48:18/0 = 0
52:18/0 = 0
53:18/0 = 0
61:18/0 = 0
62:18/0 = 0
52:19/0 = 0
53:19/0 = 0
61:19/0 = 0
62:19/0 = 0
12:20/0 = 0
14:20/0 = 0
15:20/0 = 0
27:20/0 = 0
28:20/0 = 0
30:20/0 = 0
52:20/0 = 0
53:20/0 = 0
61:20/0 = 0
62:20/0 = 0
12:21/0 = 0
14:21/0 = 0
15:21/0 = 0
27:21/0 = 0
28:21/0 = 0
30:21/0 = 0
52:21/0 = 0
53:21/0 = 0
61:21/0 = 0
62:21/0 = 0
14:22/0 = 0
15:22/0 = 0
17:22/0 = 0
21:22/0 = 0
22:22/0 = 0
24:22/0 = 0
25:22/0 = 0
27:22/0 = 0
28:22/0 = 0
52:22/0 = 0
53:22/0 = 0
61:22/0 = 0
62:22/0 = 0
12:23/0 = 0
14:23/0 = 0
15:23/0 = 0
17:23/0 = 0
19:23/0 = 0
21:23/0 = 0
22:23/0 = 0
24:23/0 = 0
25:23/0 = 0
27:23/0 = 0
28:23/0 = 0
30:23/0 = 0
52:23/0 = 0
53:23/0 = 0
61:23/0 = 0
62:23/0 = 0
12:24/0 = 0
14:24/0 = 0
15:24/0 = 0
17:24/0 = 0
19:24/0 = 0
21:24/0 = 0
22:24/0 = 0
24:24/0 = 0
25:24/0 = 0
27:24/0 = 0
28:24/0 = 0
30:24/0 = 0
52:25/0 = 0
53:25/0 = 0
55:25/0 = 0
56:25/0 = 0
58:25/0 = 0
59:25/0 = 0
61:25/0 = 0
62:25/0 = 0
52:26/0 = 0
53:26/0 = 0
55:26/0 = 0
56:26/0 = 0
58:26/0 = 0
59:26/0 = 0
61:26/0 = 0
62:26/0 = 0
52:27/0 = 0
53:27/0 = 0
55:27/0 = 0
56:27/0 = 0
58:27/0 = 0
59:27/0 = 0
61:27/0 = 0
62:27/0 = 0
8:28/0 = 0
9:28/0 = 0
11:28/0 = 0
12:28/0 = 0
13:28/0 = 0
15:28/0 = 0
16:28/0 = 0
18:28/0 = 0
20:28/0 = 0
22:28/0 = 0
24:28/0 = 0
26:28/0 = 0
27:28/0 = 0
29:28/0 = 0
30:28/0 = 0
31:28/0 = 0
33:28/0 = 0
34:28/0 = 0
52:28/0 = 0
53:28/0 = 0
55:28/0 = 0
56:28/0 = 0
58:28/0 = 0
59:28/0 = 0
61:28/0 = 0
62:28/0 = 0
8:29/0 = 0
9:29/0 = 0
11:29/0 = 0
12:29/0 = 0
13:29/0 = 0
15:29/0 = 0
16:29/0 = 0
18:29/0 = 0
20:29/0 = 0
22:29/0 = 0
24:29/0 = 0
26:29/0 = 0
27:29/0 = 0
29:29/0 = 0
30:29/0 = 0
31:29/0 = 0
33:29/0 = 0
34:29/0 = 0
52:29/0 = 0
53:29/0 = 0
55:29/0 = 0
56:29/0 = 0
58:29/0 = 0
59:29/0 = 0
61:29/0 = 0
62:29/0 = 0
52:30/0 = 0
53:30/0 = 0
55:30/0 = 0
56:30/0 = 0
58:30/0 = 0
59:30/0 = 0
61:30/0 = 0
62:30/0 = 0
8:31/0 = 0
9:31/0 = 0
10:31/0 = 0
12:31/0 = 0
13:31/0 = 0
15:31/0 = 0
16:31/0 = 0
18:31/0 = 0
24:31/0 = 0
26:31/0 = 0
27:31/0 = 0
29:31/0 = 0
30:31/0 = 0
32:31/0 = 0
33:31/0 = 0
34:31/0 = 0
8:32/0 = 0
9:32/0 = 0
10:32/0 = 0
15:32/0 = 0
16:32/0 = 0
18:32/0 = 0
24:32/0 = 0
26:32/0 = 0
27:32/0 = 0
32:32/0 = 0
33:32/0 = 0
34:32/0 = 0
52:32/0 = 0
53:32/0 = 0
54:32/0 = 0
55:32/0 = 0
56:32/0 = 0
57:32/0 = 0
58:32/0 = 0
59:32/0 = 0
60:32/0 = 0
61:32/0 = 0
62:32/0 = 0
8:33/0 = 0
9:33/0 = 0
10:33/0 = 0
12:33/0 = 0
30:33/0 = 0
32:33/0 = 0
33:33/0 = 0
34:33/0 = 0
52:33/0 = 0
53:33/0 = 0
54:33/0 = 0
55:33/0 = 0
56:33/0 = 0
58:33/0 = 0
59:33/0 = 0
60:33/0 = 0
61:33/0 = 0
62:33/0 = 0
52:34/0 = 0
53:34/0 = 0
54:34/0 = 0
55:34/0 = 0
56:34/0 = 0
58:34/0 = 0
59:34/0 = 0
60:34/0 = 0
61:34/0 = 0
62:34/0 = 0
1:35/0 = 0
29:35/0 = 0
52:35/0 = 0
53:35/0 = 0
54:35/0 = 0
55:35/0 = 0
56:35/0 = 0
57:35/0 = 0
58:35/0 = 0
59:35/0 = 0
60:35/0 = 0
61:35/0 = 0
62:35/0 = 0
1:36/0 = 0
6:36/0 = 0
7:36/0 = 0
29:36/0 = 0
52:36/0 = 0
53:36/0 = 0
54:36/0 = 0
55:36/0 = 0
59:36/0 = 0
60:36/0 = 0
61:36/0 = 0
62:36/0 = 0
1:37/0 = 0
3:37/0 = 0
4:37/0 = 0
6:37/0 = 0
7:37/0 = 0
26:37/0 = 0
27:37/0 = 0
29:37/0 = 0
3:38/0 = 0
4:38/0 = 0
26:38/0 = 0
27:38/0 = 0
3:39/0 = 0
4:39/0 = 0
6:39/0 = 0
7:39/0 = 0
9:39/0 = 0
11:39/0 = 0
13:39/0 = 0
14:39/0 = 0
16:39/0 = 0
17:39/0 = 0
19:39/0 = 0
21:39/0 = 0
23:39/0 = 0
24:39/0 = 0
26:39/0 = 0
27:39/0 = 0
3:40/0 = 0
4:40/0 = 0
6:40/0 = 0
7:40/0 = 0
9:40/0 = 0
11:40/0 = 0
13:40/0 = 0
14:40/0 = 0
16:40/0 = 0
17:40/0 = 0
19:40/0 = 0
21:40/0 = 0
23:40/0 = 0
24:40/0 = 0
26:40/0 = 0
27:40/0 = 0
3:41/0 = 0
4:41/0 = 0
6:41/0 = 0
7:41/0 = 0
9:41/0 = 0
11:41/0 = 0
13:41/0 = 0
14:41/0 = 0
16:41/0 = 0
17:41/0 = 0
19:41/0 = 0
21:41/0 = 0
23:41/0 = 0
24:41/0 = 0
26:41/0 = 0
27:41/0 = 0
30:41/0 = 0
31:41/0 = 0
32:41/0 = 0
56:41/0 = 0
57:41/0 = 0
58:41/0 = 0
3:42/0 = 0
4:42/0 = 0
26:42/0 = 0
27:42/0 = 0
3:43/0 = 0
4:43/0 = 0
14:43/0 = 0
15:43/0 = 0
17:43/0 = 0
18:43/0 = 0
20:43/0 = 0
21:43/0 = 0
23:43/0 = 0
24:43/0 = 0
26:43/0 = 0
27:43/0 = 0
32:43/0 = 0
33:43/0 = 0
34:43/0 = 0
35:43/0 = 0
36:43/0 = 0
37:43/0 = 0
38:43/0 = 0
39:43/0 = 0
40:43/0 = 0
42:43/0 = 0
43:43/0 = 0
45:43/0 = 0
46:43/0 = 0
48:43/0 = 0
49:43/0 = 0
50:43/0 = 0
51:43/0 = 0
52:43/0 = 0
53:43/0 = 0
54:43/0 = 0
55:43/0 = 0
56:43/0 = 0
3:44/0 = 0
4:44/0 = 0
6:44/0 = 0
8:44/0 = 0
10:44/0 = 0
12:44/0 = 0
14:44/0 = 0
15:44/0 = 0
17:44/0 = 0
18:44/0 = 0
20:44/0 = 0
21:44/0 = 0
23:44/0 = 0
24:44/0 = 0
26:44/0 = 0
27:44/0 = 0
32:44/0 = 0
33:44/0 = 0
34:44/0 = 0
35:44/0 = 0
36:44/0 = 0
37:44/0 = 0
38:44/0 = 0
39:44/0 = 0
40:44/0 = 0
42:44/0 = 0
43:44/0 = 0
45:44/0 = 0
46:44/0 = 0
48:44/0 = 0
49:44/0 = 0
50:44/0 = 0
51:44/0 = 0
52:44/0 = 0
53:44/0 = 0
54:44/0 = 0
55:44/0 = 0
56:44/0 = 0
3:45/0 = 0
4:45/0 = 0
26:45/0 = 0
27:45/0 = 0
6:46/0 = 0
8:46/0 = 0
10:46/0 = 0
12:46/0 = 0
14:46/0 = 0
15:46/0 = 0
16:46/0 = 0
17:46/0 = 0
18:46/0 = 0
19:46/0 = 0
21:46/0 = 0
23:46/0 = 0
34:46/0 = 0
35:46/0 = 0
36:46/0 = 0
52:46/0 = 0
53:46/0 = 0
54:46/0 = 0
3:47/0 = 0
4:47/0 = 0
14:47/0 = 0
15:47/0 = 0
16:47/0 = 0
17:47/0 = 0
18:47/0 = 0
19:47/0 = 0
26:47/0 = 0
27:47/0 = 0
34:47/0 = 0
35:47/0 = 0
36:47/0 = 0
52:47/0 = 0
53:47/0 = 0
54:47/0 = 0
3:48/0 = 0
4:48/0 = 0
6:48/0 = 0
8:48/0 = 0
10:48/0 = 0
12:48/0 = 0
14:48/0 = 0
15:48/0 = 0
16:48/0 = 0
17:48/0 = 0
18:48/0 = 0
19:48/0 = 0
21:48/0 = 0
23:48/0 = 0
26:48/0 = 0
27:48/0 = 0
39:48/0 = 0
40:48/0 = 0
41:48/0 = 0
42:48/0 = 0
14:49/0 = 0
15:49/0 = 0
16:49/0 = 0
17:49/0 = 0
18:49/0 = 0
19:49/0 = 0
34:49/0 = 0
35:49/0 = 0
36:49/0 = 0
39:49/0 = 0
40:49/0 = 0
41:49/0 = 0
42:49/0 = 0
52:49/0 = 0
53:49/0 = 0
54:49/0 = 0
3:50/0 = 0
4:50/0 = 0
6:50/0 = 0
8:50/0 = 0
10:50/0 = 0
12:50/0 = 0
21:50/0 = 0
23:50/0 = 0
26:50/0 = 0
27:50/0 = 0
39:50/0 = 0
40:50/0 = 0
41:50/0 = 0
42:50/0 = 0
3:51/0 = 0
4:51/0 = 0
14:51/0 = 0
15:51/0 = 0
16:51/0 = 0
17:51/0 = 0
18:51/0 = 0
19:51/0 = 0
26:51/0 = 0
27:51/0 = 0
34:51/0 = 0
35:51/0 = 0
36:51/0 = 0
39:51/0 = 0
40:51/0 = 0
41:51/0 = 0
42:51/0 = 0
52:51/0 = 0
53:51/0 = 0
54:51/0 = 0
14:52/0 = 0
15:52/0 = 0
16:52/0 = 0
17:52/0 = 0
18:52/0 = 0
19:52/0 = 0
21:52/0 = 0
23:52/0 = 0
3:53/0 = 0
4:53/0 = 0
14:53/0 = 0
15:53/0 = 0
16:53/0 = 0
17:53/0 = 0
18:53/0 = 0
19:53/0 = 0
26:53/0 = 0
27:53/0 = 0
34:53/0 = 0
35:53/0 = 0
36:53/0 = 0
39:53/0 = 0
40:53/0 = 0
52:53/0 = 0
53:53/0 = 0
54:53/0 = 0
3:54/0 = 0
4:54/0 = 0
14:54/0 = 0
15:54/0 = 0
16:54/0 = 0
17:54/0 = 0
18:54/0 = 0
19:54/0 = 0
26:54/0 = 0
27:54/0 = 0
34:54/0 = 0
35:54/0 = 0
36:54/0 = 0
39:54/0 = 0
40:54/0 = 0
52:54/0 = 0
53:54/0 = 0
54:54/0 = 0
3:55/0 = 0
4:55/0 = 0
26:55/0 = 0
27:55/0 = 0
3:56/0 = 0
4:56/0 = 0
26:56/0 = 0
27:56/0 = 0
3:57/0 = 0
4:57/0 = 0
6:57/0 = 0
7:57/0 = 0
9:57/0 = 0
11:57/0 = 0
13:57/0 = 0
14:57/0 = 0
16:57/0 = 0
17:57/0 = 0
19:57/0 = 0
21:57/0 = 0
23:57/0 = 0
24:57/0 = 0
26:57/0 = 0
27:57/0 = 0
3:58/0 = 0
4:58/0 = 0
6:58/0 = 0
7:58/0 = 0
9:58/0 = 0
11:58/0 = 0
13:58/0 = 0
14:58/0 = 0
16:58/0 = 0
17:58/0 = 0
19:58/0 = 0
21:58/0 = 0
23:58/0 = 0
24:58/0 = 0
26:58/0 = 0
27:58/0 = 0
3:59/0 = 0
4:59/0 = 0
6:59/0 = 0
7:59/0 = 0
9:59/0 = 0
11:59/0 = 0
13:59/0 = 0
14:59/0 = 0
16:59/0 = 0
17:59/0 = 0
19:59/0 = 0
21:59/0 = 0
23:59/0 = 0
24:59/0 = 0
26:59/0 = 0
27:59/0 = 0
3:60/0 = 0
4:60/0 = 0
26:60/0 = 0
27:60/0 = 0
1:61/0 = 0
3:61/0 = 0
4:61/0 = 0
26:61/0 = 0
27:61/0 = 0
29:61/0 = 0
1:62/0 = 0
29:62/0 = 0
1:63/0 = 0
29:63/0 = 0

[sub_resource type="TileSet" id="TileSet_6ex34"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_r5nwj")
sources/3 = SubResource("TileSetAtlasSource_0pqkt")
sources/1 = SubResource("TileSetAtlasSource_mcpbm")
sources/2 = SubResource("TileSetAtlasSource_6fc5q")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i78jb"]
size = Vector2(20.25, 19.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1fy1"]
atlas = ExtResource("11_ku7g6")
region = Rect2(27, 0, 9, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncbyo"]
atlas = ExtResource("11_ku7g6")
region = Rect2(18, 0, 9, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbt4r"]
atlas = ExtResource("11_ku7g6")
region = Rect2(9, 0, 9, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_8x8la"]
atlas = ExtResource("11_ku7g6")
region = Rect2(0, 0, 9, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8j3r"]
atlas = ExtResource("12_y853e")
region = Rect2(0, 0, 9, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulbpt"]
atlas = ExtResource("12_y853e")
region = Rect2(0, 0, 9, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_poi2t"]
atlas = ExtResource("12_y853e")
region = Rect2(9, 0, 9, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_1q4ha"]
atlas = ExtResource("12_y853e")
region = Rect2(18, 0, 9, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gods"]
atlas = ExtResource("12_y853e")
region = Rect2(27, 0, 9, 39)

[sub_resource type="SpriteFrames" id="SpriteFrames_30j2g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1fy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncbyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbt4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8x8la")
}],
"loop": false,
"name": &"close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8j3r")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulbpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_poi2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1q4ha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gods")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"notdef",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f0vry"]
size = Vector2(6, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dpg7t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eqxnn"]
size = Vector2(20, 39)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vy7uy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_aeonr"]
radius = 27.8927

[node name="level_1" type="Node2D"]
script = ExtResource("1_rfq76")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_6ex34")
format = 2
layer_0/name = "back1"
layer_0/tile_data = PackedInt32Array(131070, 3342339, 1, 131071, 3342339, 1, 65536, 3342339, 1, 65537, 3342339, 1, 65538, 3342339, 1, 65539, 3342339, 1, 65540, 3342339, 1, 65541, 3342339, 1, 131069, 3342339, 1, 131068, 3342339, 1, 131067, 3342339, 1, 131065, 3342339, 1, 131066, 3342339, 1, 65542, 3342339, 1, 0, 1, 0, 131064, 3342339, 1, 131063, 3342339, 1, 131062, 3342339, 1, 131061, 3342339, 1, 131060, 3342339, 1, 131058, 3342339, 1, 131057, 3342339, 1, 131059, 3342339, 1, 65543, 3342339, 1, 65544, 3342339, 1, 65545, 3342339, 1, 65546, 3342339, 1, 65547, 3342339, 1, 65548, 3342339, 1, 65549, 3342339, 1, 65550, 3342339, 1, 131056, 3342339, 1, 131055, 3342339, 1, 131054, 3342339, 1, 131053, 3342339, 1, 131052, 3342339, 1, 65551, 3342339, 1, 65552, 3342339, 1, 65553, 3342339, 1, 65554, 3342339, 1, 65555, 3342339, 1, 65556, 3342339, 1, 65557, 3342339, 1, 65558, 3342339, 1, 65559, 3342339, 1, 65560, 3342339, 1, 65561, 3342339, 1, 65562, 3342339, 1, 65563, 3342339, 1)
layer_1/name = "back2"

[node name="Player" parent="." instance=ExtResource("6_wtfig")]

[node name="Soul" parent="Player" instance=ExtResource("7_ahqs1")]
position = Vector2(-1, -33)

[node name="cameraKnight" parent="Player" instance=ExtResource("8_828ne")]

[node name="Transition" parent="." instance=ExtResource("8_vwnpj")]
offset_left = -31.0
offset_top = -31.0
offset_right = -31.0
offset_bottom = -31.0

[node name="Area2D2" type="Area2D" parent="."]
script = ExtResource("9_motuu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(-55, -2)
shape = SubResource("RectangleShape2D_i78jb")

[node name="TESTDOOR" type="AnimatedSprite2D" parent="."]
show_behind_parent = true
position = Vector2(-103, -3)
sprite_frames = SubResource("SpriteFrames_30j2g")
animation = &"notdef"

[node name="StaticBody2D" type="StaticBody2D" parent="TESTDOOR"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TESTDOOR/StaticBody2D"]
shape = SubResource("RectangleShape2D_f0vry")

[node name="Area2Ddoor2" type="Area2D" parent="."]
script = ExtResource("11_84byi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2Ddoor2"]
position = Vector2(85, 0)
shape = SubResource("RectangleShape2D_dpg7t")

[node name="TESTDOOR2" type="AnimatedSprite2D" parent="."]
show_behind_parent = true
position = Vector2(118, -1)
sprite_frames = SubResource("SpriteFrames_30j2g")
animation = &"close"

[node name="StaticBody2D" type="StaticBody2D" parent="TESTDOOR2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TESTDOOR2/StaticBody2D"]
shape = SubResource("RectangleShape2D_f0vry")

[node name="TESTDOOR3" type="AnimatedSprite2D" parent="."]
show_behind_parent = true
position = Vector2(-219, -1)
sprite_frames = SubResource("SpriteFrames_30j2g")
animation = &"notdef"

[node name="StaticBody2D" type="StaticBody2D" parent="TESTDOOR3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TESTDOOR3/StaticBody2D"]
shape = SubResource("RectangleShape2D_f0vry")

[node name="Area2DKEYUSE" type="Area2D" parent="."]
position = Vector2(-219, -1)
script = ExtResource("12_17usk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DKEYUSE"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_eqxnn")

[node name="Sprite2D" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(-55, -2)
texture = ExtResource("11_yaucr")

[node name="Sprite2D2" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(85, 0)
texture = ExtResource("11_yaucr")

[node name="Label" type="Label" parent="."]
show_behind_parent = true
offset_left = -62.0
offset_top = -44.0
offset_right = -8.0
offset_bottom = -21.0
text = "Button"

[node name="Label2" type="Label" parent="."]
show_behind_parent = true
offset_left = 49.0
offset_top = -42.0
offset_right = 103.0
offset_bottom = -19.0
text = "Lever"

[node name="Label3" type="Label" parent="."]
show_behind_parent = true
offset_left = -203.0
offset_top = -42.0
offset_right = -149.0
offset_bottom = -19.0
text = "Key"

[node name="Label4" type="Label" parent="."]
show_behind_parent = true
offset_left = 208.0
offset_top = -66.0
offset_right = 345.0
offset_bottom = 9.0
text = "Attack 
check 
area"

[node name="Area2Dkey" type="Area2D" parent="."]
position = Vector2(-165, 0)
script = ExtResource("13_l85ip")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2Dkey"]
shape = SubResource("RectangleShape2D_vy7uy")

[node name="key" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(-165, 0)
texture = ExtResource("11_yaucr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("15_3ylfc")

[node name="Pause_menu" parent="CanvasLayer" instance=ExtResource("16_a00e1")]

[node name="healthbar" parent="CanvasLayer" instance=ExtResource("18_r66lm")]

[node name="dashBar" parent="CanvasLayer" instance=ExtResource("19_wl2ee")]

[node name="hitchecker" type="Area2D" parent="."]
position = Vector2(5, -3)
script = ExtResource("17_mci04")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitchecker"]
position = Vector2(224, -4)
shape = SubResource("CircleShape2D_aeonr")

[node name="testBadGuy" parent="." instance=ExtResource("19_s0i61")]
position = Vector2(358, -15)

[node name="testBadGuy2" parent="." instance=ExtResource("19_s0i61")]
position = Vector2(257, -12)

[node name="healheart" parent="." instance=ExtResource("23_npj3d")]
position = Vector2(-293, 1)

[node name="healheart2" parent="." instance=ExtResource("23_npj3d")]
position = Vector2(-314, 1)

[node name="healheart3" parent="." instance=ExtResource("23_npj3d")]
position = Vector2(-304, -17)

[node name="big_skeleton" parent="." instance=ExtResource("24_l168i")]
position = Vector2(-159, -12)

[connection signal="body_entered" from="Area2D2" to="Area2D2" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D2" to="Area2D2" method="_on_body_exited"]
[connection signal="body_entered" from="Area2Ddoor2" to="Area2Ddoor2" method="_on_body_entered"]
[connection signal="body_exited" from="Area2Ddoor2" to="Area2Ddoor2" method="_on_body_exited"]
[connection signal="body_entered" from="Area2DKEYUSE" to="Area2DKEYUSE" method="_on_body_entered"]
[connection signal="body_exited" from="Area2DKEYUSE" to="Area2DKEYUSE" method="_on_body_exited"]
[connection signal="body_entered" from="Area2Dkey" to="Area2Dkey" method="_on_body_entered"]
[connection signal="body_exited" from="Area2Dkey" to="Area2Dkey" method="_on_body_exited"]
[connection signal="body_entered" from="hitchecker" to="hitchecker" method="_on_body_entered"]
[connection signal="body_exited" from="hitchecker" to="hitchecker" method="_on_body_exited"]
